--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ html, body { margin:0; padding:0; height:100vh; font-family: monospace; backgrou
 #homeScreen, #difficultyScreen, #pauseScreen, #endScreen { position:fixed; top:0; left:0; width:100%; height:100%; display:none; flex-direction:column; justify-content:center; align-items:center; z-index:2000; }
 #homeScreen h1 { font-size:48px; margin-bottom:20px; } #homeHighscore { font-size:24px; margin-bottom:20px; color:#ff0; }
 .homeBtn, .diffBtn, .pauseBtn, .endBtn { font-size:28px; padding:15px 35px; margin:10px; border:none; border-radius:12px; color:#fff; font-weight:bold; cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); }
-#backFromDiff { font-size:24px; padding:10px 25px; margin-top:20px; background:linear-gradient(45deg,#6a00f4,#a044ff); }
+#backFromDiff { font-size:20px; padding:10px 25px; margin-top:20px; background:linear-gradient(45deg,#6a00f4,#a044ff); }
 #pauseScreen h2, #endScreen h2 { font-size:36px; margin-bottom:20px; }
 #pauseScreen div, #endScreen div { font-size:28px; color:#d166ff; margin-bottom:20px; }
 #scoreContainer { position:fixed; top:10px; left:50%; transform:translateX(-50%); text-align:center; display:none; z-index:1001; }
@@ -89,41 +89,38 @@ html, body { margin:0; padding:0; height:100vh; font-family: monospace; backgrou
 <script>
 // --- VARIABLES ---
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, startTime;
-let currentDifficulty = 'normal';
-const speedSettings = {easy:0.5, normal:1, hard:1.5};
+let currentDifficulty='normal';
+const speedSettings={easy:0.5, normal:1, hard:1.5};
 
 // --- ELEMENTS ---
-const loadingScreen = document.getElementById('loadingScreen');
-const homeScreen = document.getElementById('homeScreen');
-const startBtnHome = document.getElementById('startBtnHome');
-const indexBtnHome = document.getElementById('indexBtnHome');
-const difficultyScreen = document.getElementById('difficultyScreen');
-const diffButtons = document.querySelectorAll('.diffBtn');
-const backFromDiff = document.getElementById('backFromDiff');
-const indexPanel = document.getElementById('indexPanel');
-const closeBtnIndex = document.querySelector('#indexPanel .closeBtn');
-const scoreContainer = document.getElementById('scoreContainer');
-const scoreEl = document.getElementById('score');
-const highscoreEl = document.getElementById('highscore');
-const livesEl = document.getElementById('lives');
-const pauseBtn = document.getElementById('pauseBtn');
-const pauseScreen = document.getElementById('pauseScreen');
-const pauseCurrentScore = document.getElementById('pauseCurrentScore');
-const resumeBtn = document.getElementById('resumeBtn');
-const endGameBtn = document.getElementById('endGameBtn');
-const endScreen = document.getElementById('endScreen');
-const finalScoreText = document.getElementById('finalScoreText');
-const continueBtn = document.getElementById('continueBtn');
-const restartBtn = document.getElementById('restartBtn');
-const popSound = document.getElementById('popSound');
-const homeHighscore = document.getElementById('homeHighscore');
+const loadingScreen=document.getElementById('loadingScreen');
+const homeScreen=document.getElementById('homeScreen');
+const startBtnHome=document.getElementById('startBtnHome');
+const indexBtnHome=document.getElementById('indexBtnHome');
+const difficultyScreen=document.getElementById('difficultyScreen');
+const diffButtons=document.querySelectorAll('.diffBtn');
+const backFromDiff=document.getElementById('backFromDiff');
+const indexPanel=document.getElementById('indexPanel');
+const closeBtnIndex=document.querySelector('#indexPanel .closeBtn');
+const scoreContainer=document.getElementById('scoreContainer');
+const scoreEl=document.getElementById('score');
+const highscoreEl=document.getElementById('highscore');
+const livesEl=document.getElementById('lives');
+const pauseBtn=document.getElementById('pauseBtn');
+const pauseScreen=document.getElementById('pauseScreen');
+const pauseCurrentScore=document.getElementById('pauseCurrentScore');
+const resumeBtn=document.getElementById('resumeBtn');
+const endGameBtn=document.getElementById('endGameBtn');
+const endScreen=document.getElementById('endScreen');
+const finalScoreText=document.getElementById('finalScoreText');
+const continueBtn=document.getElementById('continueBtn');
+const restartBtn=document.getElementById('restartBtn');
+const popSound=document.getElementById('popSound');
+const homeHighscore=document.getElementById('homeHighscore');
 
 // --- LOADING ---
 window.addEventListener('load',()=>{
-  setTimeout(()=>{
-    loadingScreen.style.display='none';
-    showHomeScreen();
-  },2000);
+  setTimeout(()=>{ loadingScreen.style.display='none'; showHomeScreen(); },2000);
 });
 
 // --- HOME ---
@@ -222,7 +219,6 @@ function endGame(){ gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[
 
 continueBtn.addEventListener('click',()=>{ endScreen.style.display='none'; showHomeScreen(); });
 restartBtn.addEventListener('click',()=>{ endScreen.style.display='none'; difficultyScreen.style.display='flex'; });
-
 </script>
 </body>
 </html>
