--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
 <script>
-/* ================== JS LOGIC ================== */
-/* — verze s plnohodnotnou pauzou 1:1 — */
+// ================== ELEMENTS ==================
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
 const indexPanel=document.getElementById('indexPanel');
@@ -121,17 +120,16 @@ const finalScoreText=document.getElementById('finalScoreText');
 const versionLabel=document.getElementById('versionLabel');
 const easterEl=document.getElementById('easterEgg');
 const closeBtn=document.querySelector('#indexPanel .closeBtn');
+
 const pauseBtn=document.getElementById('pauseBtn');
 const pauseScreen=document.getElementById('pauseScreen');
 const continueGameBtn=document.getElementById('continueGameBtn');
 const endGameBtn=document.getElementById('endGameBtn');
 const continueBtn=document.getElementById('continueBtn');
-const loadingScreen=document.getElementById('loadingScreen');
 
-let score=0, highscore=0, lives=3;
-let bubbles=[], gameRunning=false, gamePaused=false, startTime;
-let spawnInterval=null;
+let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, startTime;
 
+// ================== LOADING SCREEN ==================
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
@@ -141,6 +139,7 @@ window.addEventListener('load',()=>{
   },2000);
 });
 
+// ================== BUTTON LOGIC ==================
 function attachButtonEvents(){
   startBtn.addEventListener('click',startCountdown);
   indexBtn.addEventListener('click',(e)=>{
@@ -160,6 +159,7 @@ function attachButtonEvents(){
   endGameBtn.addEventListener('click', endGame);
 }
 
+// ================== COUNTDOWN ==================
 function startCountdown(){
   versionLabel.style.display='none';
   startBtn.style.display='none';
@@ -180,11 +180,12 @@ function startCountdown(){
   },1000);
 }
 
+// ================== GAME LOGIC ==================
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; gamePaused=false; startTime=Date.now();
   scoreEl.textContent="Skóre: "+score; livesEl.textContent="Životy: "+lives;
   spawnBubble();
-  updateBubbles();
+  requestAnimationFrame(updateBubbles);
 }
 
 function togglePause(){
@@ -194,74 +195,96 @@ function togglePause(){
     pauseScreen.classList.remove('fadeOut'); pauseScreen.classList.add('fadeIn'); pauseScreen.style.display='flex';
   } else{
     pauseScreen.classList.remove('fadeIn'); pauseScreen.classList.add('fadeOut'); setTimeout(()=> pauseScreen.style.display='none',500);
-    updateBubbles();
   }
 }
 
-function endGame(){
-  gameRunning=false; gamePaused=false;
-  bubbles.forEach(b=>b.element.remove());
-  bubbles=[];
-  clearInterval(spawnInterval);
-  pauseScreen.style.display='none';
-  pauseBtn.style.display='none';
-  scoreContainer.style.display='none';
-  endScreen.style.display='flex';
-  finalScoreText.textContent="KONEC! Skóre: "+score;
-  if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
-}
-
-function spawnBubble(){
-  if(!gameRunning) return;
-  const bubble=document.createElement('div');
-  bubble.classList.add('bubble');
-  bubble.style.left=Math.random()*(window.innerWidth-80)+'px';
-  bubble.style.top=Math.random()*(window.innerHeight-80)+'px';
-  let type='normal'; let r=Math.random();
-  if(r<0.001){type='instawin';bubble.classList.add('instawin');bubble.textContent='?12?';}
-  else if(r<0.0025){type='rare2x';bubble.classList.add('rare2x');bubble.textContent='12×2';}
-  else if(r<0.0125){type='rare144';bubble.classList.add('rare144');bubble.textContent='12²';}
-  else if(r<0.0325){type='triple';bubble.classList.add('triple');bubble.textContent='3×12';}
-  else if(r<0.0625){type='gravity';bubble.classList.add('gravity');bubble.textContent='<12>';}
-  else if(r<0.0775){type='invert';bubble.classList.add('invert');bubble.textContent='!12!';}
-  else{bubble.textContent='12';}
-  bubble.addEventListener('click',(e)=>popBubble(e,bubble,type));
-  document.body.appendChild(bubble);
-  bubbles.push({element:bubble,dx:(Math.random()-0.5)*2,dy:(Math.random()-0.5)*2});
-  if(!spawnInterval){
-    spawnInterval=setInterval(()=>{ if(gameRunning&&!gamePaused) spawnBubble(); },1200);
-  }
-}
-
-function popBubble(e,bubble,type){
-  if(gamePaused) return;
-  e.stopPropagation(); popSound.currentTime=0; popSound.play();
-  bubble.remove(); bubbles=bubbles.filter(b=>b.element!==bubble);
-  switch(type){
-    case 'normal':score++;break;
-    case 'rare2x':score*=2;break;
-    case 'rare144':score+=144;break;
-    case 'triple':for(let i=0;i<3;i++)spawnBubble();break;
-    case 'gravity':bubbles.forEach(b=>{b.element.style.left=bubble.style.left;b.element.style.top=bubble.style.top;});break;
-    case 'invert':document.body.style.filter='invert(1)';setTimeout(()=>document.body.style.filter='invert(0)',5000);score+=10;break;
-    case 'instawin':score+=999999999;endGame();return;
-  }
-  scoreEl.textContent="Skóre: "+score;
-}
-
+// ================== UPDATE BUBBLES ==================
 function updateBubbles(){
   if(!gameRunning) return;
-  if(gamePaused) return;
-  bubbles.forEach(b=>{
-    let rect=b.element.getBoundingClientRect();
-    let x=rect.left+b.dx, y=rect.top+b.dy;
-    if(x<=0||x>=window.innerWidth-80) b.dx*=-1;
-    if(y<=0||y>=window.innerHeight-80) b.dy*=-1;
-    b.element.style.left=(x<=0?0:(x>=window.innerWidth-80?window.innerWidth-80:x))+'px';
-    b.element.style.top=(y<=0?0:(y>=window.innerHeight-80?window.innerHeight-80:y))+'px';
-  });
+  if(!gamePaused){
+    bubbles.forEach(bubble=>{
+      const top=parseFloat(bubble.style.top);
+      bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
+      if(top<=0){  
+        lives--; livesEl.textContent="Životy: "+lives;  
+        bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);  
+        if(lives<=0) endGame();
+      }
+    });
+  }
   requestAnimationFrame(updateBubbles);
 }
+
+// ================== SPAWN BUBBLES ==================
+function spawnBubble(){ 
+  if(!gameRunning || gamePaused) { setTimeout(spawnBubble,500); return; }
+  const elapsed=(Date.now()-startTime)/1000; const speedMultiplier=1+elapsed/120; const chance=Math.random();
+  const bubble=document.createElement('div'); bubble.classList.add('bubble');
+  if(chance<=0.001){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
+  else if(chance<=0.016){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
+  else if(chance<=0.0185){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=0.0285){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  else if(chance<=0.0485){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
+  else if(chance<=0.0785){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else { bubble.textContent="12"; bubble.dataset.type="normal"; }
+
+  const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px';
+  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+
+  const pop=()=>{
+    if(!gameRunning) return;
+    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0, popSound.play();
+    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
+    if(bubble.dataset.type==="2x") score*=2;
+    else if(bubble.dataset.type==="144") score+=144;
+    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
+    else if(bubble.dataset.type==="gravity"){
+      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
+      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
+      bubbles.forEach(b=>{ b.style.left=(bx-parseFloat(b.style.width)/2)+'px'; b.style.top=(by-parseFloat(b.style.height)/2)+'px'; });
+    }
+    else if(bubble.dataset.type==="invert"){ document.body.style.filter='invert(1)'; score+=10; setTimeout(()=>document.body.style.filter='',5000); }
+    else if(bubble.dataset.type==="instawin"){ score+=999999999; }
+    else score++;
+    if(score>999999999) score=999999999;
+    scoreEl.textContent="Skóre: "+score;
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; }
+  };
+
+  bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
+  bubbles.push(bubble);
+  setTimeout(spawnBubble,500);
+}
+
+function spawnSingleBubble(){ if(!gameRunning || gamePaused) return;
+  const elapsed=(Date.now()-startTime)/1000; const speedMultiplier=1+elapsed/120;
+  const bubble=document.createElement('div'); bubble.classList.add('bubble');
+  bubble.textContent="12"; bubble.dataset.type="normal";
+  const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px';
+  bubble.style.fontSize=size/3+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+
+  const pop=()=>{ if(!gameRunning) return; score++; if(score>999999999) score=999999999; scoreEl.textContent="Skóre: "+score; if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);}
+  bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
+  bubbles.push(bubble);
+}
+
+// ================== END GAME ==================
+function endGame(){
+  gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
+  scoreContainer.style.display='none'; pauseBtn.style.display='none'; pauseScreen.style.display='none';
+  if(score===12 || score<=3){ easterEl.textContent=(score===12?'12':'BRUH'); easterEl.style.display='flex'; easterEl.style.animation='fadeShake 5s forwards'; setTimeout(()=>{ easterEl.style.display='none'; showEndScreen(); },5000);}
+  else showEndScreen();
+}
+
+function showEndScreen(){ finalScoreText.textContent="Tvé skóre: "+score; endScreen.style.display='flex'; }
 </script>
 </body>
 </html>
