--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 <title>12 Bubbles</title>
 <style>
 html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: monospace; background-color:#0a0a0a; color:#fff; }
-#loadingScreen { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; display:flex; justify-content:center; align-items:center; color:#fff; font-size:50px; font-weight:bold; z-index:3000; text-align:center; }
+#loadingScreen { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; display:flex; justify-content:center; align-items:center; color:#fff; font-size:50px; font-weight:bold; z-index:3000; text-align:center; animation:eyeGlow 2s ease-in-out forwards;}
+@keyframes eyeGlow { 0% { opacity:0.2; text-shadow:none; } 50% { opacity:1; text-shadow:0 0 25px #fff,0 0 50px #fff,0 0 75px #fff; } 100% { opacity:0.2; text-shadow:none; } }
 #startBtn, #indexBtn { display:none; margin:0 auto; font-size:28px; padding:15px 35px; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); border:none; border-radius:12px; color:#fff; font-weight:bold; text-transform:uppercase; cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; z-index:1000; transition: transform 0.2s; }
 #startBtn:hover, #indexBtn:hover { transform: scale(1.05); }
 #startBtn { margin-top:30vh; } #indexBtn { margin-top:20px; }
-#difficultyPanel { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:rgba(0,0,0,0.9); padding:30px 40px; border-radius:20px; box-shadow:0 0 30px #d166ff; display:none; flex-direction:column; align-items:center; z-index:2000; text-align:center; }
+/* Difficulty Panel */
+#difficultyPanel { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:rgba(0,0,0,0.95); padding:30px 50px; border-radius:20px; display:none; flex-direction:column; align-items:center; z-index:2000; text-align:center; }
 #difficultyPanel h2 { font-size:36px; margin-bottom:25px; text-transform:uppercase; color:#d166ff; text-shadow:0 0 20px #a044ff; }
-.diffBtn { font-size:24px; padding:15px 40px; margin:10px; border:none; border-radius:10px; cursor:pointer; color:#fff; background:linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; transition: transform 0.2s; }
-.diffBtn:hover { transform: scale(1.1); }
+.diffBtn, #diffBackBtn { font-size:24px; padding:15px 40px; margin:10px; border:none; border-radius:10px; cursor:pointer; color:#fff; background:linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; transition: transform 0.2s; }
+.diffBtn:hover, #diffBackBtn:hover { transform: scale(1.1); }
 #countdown { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); font-size:80px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff; z-index:1001; display:none; }
 #scoreContainer { position:fixed; top:20px; left:50%; transform:translateX(-50%); z-index:1001; text-align:center; display:none; }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
@@ -21,15 +23,17 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 .bubble { width:80px; height:80px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-size:24px; font-weight:bold; color:#fff; background:linear-gradient(135deg,#a044ff,#6a00f4); border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset; position:absolute; cursor:pointer; transition: transform 0.2s; }
 .bubble:hover { transform: scale(1.1); }
+/* Index Panel */
 #indexPanel { position:fixed; top:100%; left:0; width:100%; max-height:70%; background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease; padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff; }
 #indexPanel h2 { text-transform:uppercase; }
 #indexPanel .closeBtn { position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer; color:#fff; font-weight:bold; z-index:1001; }
 .indexItem { display:flex; align-items:center; margin:10px 0; }
 .indexItem .bubbleImg { width:60px; height:60px; margin-right:15px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-weight:bold; color:#fff; border:2px solid #d166ff; box-shadow:0 0 15px #d166ff inset; }
 .indexItem .desc { flex:1; }
-#indexPanel { z-index:1000; }
+/* End Screen */
 #endScreen { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.95); display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px; z-index:1500; text-align:center; }
 #continueBtn { margin-top:30px; font-size:26px; padding:15px 40px; border:none; border-radius:10px; cursor:pointer; color:#fff; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff); box-shadow:0 0 10px #d166ff,0 0 20px #a044ff; }
+/* Pause */
 #pauseBtn { position: fixed; top:10px; left:10px; font-size:28px; padding:10px 8px; border:none; border-radius:8px; background: linear-gradient(45deg,#a044ff,#6a00f4); color:#fff; cursor:pointer; z-index:1001; display:none; text-shadow:0 0 10px #fff; }
 #pauseScreen { position: fixed; top: 0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.85); color:#fff; display: none; flex-direction: column; justify-content: center; align-items: center; z-index:2000; text-align:center; backdrop-filter: blur(5px); }
 #pauseText { font-size:60px; font-weight:bold; margin-bottom:30px; text-shadow:0 0 20px #fff; }
@@ -47,12 +51,15 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
   <button class="diffBtn" data-diff="easy">EASY</button>
   <button class="diffBtn" data-diff="normal">NORMAL</button>
   <button class="diffBtn" data-diff="hard">HARD</button>
+  <button id="diffBackBtn">BACK</button>
 </div>
 
 <div id="indexPanel">
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
   <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Běžná:</span> +1 skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Vzácná 0,25%:</span> Zdvojnásobí skóre</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Vzácná 1%:</span> +144 skóre</div></div>
 </div>
 
 <div id="countdown"></div>
@@ -77,8 +84,7 @@ html, body { margin:0; padding:0; height:100vh; overflow:hidden; font-family: mo
 <audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
 
 <script>
-let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, startTime, difficulty="normal", spawnRate=500, speedMultiplier=1;
-
+// ================= Elements =================
 const startBtn=document.getElementById('startBtn');
 const indexBtn=document.getElementById('indexBtn');
 const indexPanel=document.getElementById('indexPanel');
@@ -90,6 +96,7 @@ const livesEl=document.getElementById('lives');
 const highscoreEl=document.getElementById('highscore');
 const popSound=document.getElementById('popSound');
 const difficultyPanel=document.getElementById('difficultyPanel');
+const diffBackBtn=document.getElementById('diffBackBtn');
 const pauseBtn=document.getElementById('pauseBtn');
 const pauseScreen=document.getElementById('pauseScreen');
 const continueGameBtn=document.getElementById('continueGameBtn');
@@ -97,7 +104,9 @@ const endGameBtn=document.getElementById('endGameBtn');
 const endScreen=document.getElementById('endScreen');
 const finalScoreText=document.getElementById('finalScoreText');
 
-// Loading screen
+let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, startTime, spawnInterval=500, speedMultiplier=1;
+
+// ================= Loading =================
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     document.getElementById('loadingScreen').style.display='none';
@@ -106,17 +115,24 @@ window.addEventListener('load',()=>{
   },2000);
 });
 
-// Buttons
+// ================= Buttons =================
 startBtn.addEventListener('click',()=>{
   startBtn.style.display='none';
   indexBtn.style.display='none';
   difficultyPanel.style.display='flex';
 });
+diffBackBtn.addEventListener('click',()=>{
+  difficultyPanel.style.display='none';
+  startBtn.style.display='block';
+  indexBtn.style.display='block';
+});
 document.querySelectorAll('.diffBtn').forEach(btn=>{
   btn.addEventListener('click',()=>{
-    difficulty=btn.dataset.diff;
+    const diff=btn.dataset.diff;
+    if(diff==='easy'){ spawnInterval=800; speedMultiplier=0.8; }
+    else if(diff==='normal'){ spawnInterval=500; speedMultiplier=1; }
+    else if(diff==='hard'){ spawnInterval=300; speedMultiplier=1.5; }
     difficultyPanel.style.display='none';
-    applyDifficulty();
     startCountdown();
   });
 });
@@ -127,7 +143,6 @@ indexBtn.addEventListener('click',(e)=>{
 });
 closeBtn.addEventListener('click',(e)=>{ e.stopPropagation(); indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; });
 document.body.addEventListener('click',()=>{ if(indexPanel.style.top==='30%'){ indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block'; } });
-
 continueGameBtn.addEventListener('click',togglePause);
 endGameBtn.addEventListener('click',endGame);
 document.getElementById('continueBtn').addEventListener('click',()=>{
@@ -136,19 +151,10 @@ document.getElementById('continueBtn').addEventListener('click',()=>{
   indexBtn.style.display='block';
 });
 
-// Difficulty
-function applyDifficulty(){
-  switch(difficulty){
-    case "easy": spawnRate=800; speedMultiplier=0.8; document.body.style.backgroundColor="#0a3a0a"; break;
-    case "normal": spawnRate=500; speedMultiplier=1; document.body.style.backgroundColor="#0a0a3a"; break;
-    case "hard": spawnRate=300; speedMultiplier=1.5; document.body.style.backgroundColor="#3a0a0a"; break;
-  }
-}
-
-// Countdown
+// ================= Countdown =================
 function startCountdown(){
-  let count=3;
   countdownEl.style.display='block';
+  let count=3;
   countdownEl.textContent=count;
   const interval=setInterval(()=>{
     count--;
@@ -161,33 +167,28 @@ function startCountdown(){
   },1000);
 }
 
-// Start Game
+// ================= Game =================
 function startGame(){
   score=0; lives=3; bubbles=[]; gameRunning=true; gamePaused=false; startTime=Date.now();
-  scoreContainer.style.display='block';
-  pauseBtn.style.display='block';
+  scoreContainer.style.display='block'; pauseBtn.style.display='block';
   updateScore(); updateLives();
   spawnBubble();
   requestAnimationFrame(updateBubbles);
 }
-
-// Update bubbles
 function updateBubbles(){
   if(!gameRunning) return;
   if(!gamePaused){
     bubbles.forEach(b=>{
       let top=parseFloat(b.style.top);
-      top -= b.dataset.speed;
+      top -= parseFloat(b.dataset.speed);
       b.style.top=top+'px';
-      if(top <= -100){ b.remove(); bubbles=bubbles.filter(bb=>bb!==b); loseLife(); }
+      if(top<=-100){ b.remove(); bubbles=bubbles.filter(bb=>bb!==b); loseLife(); }
     });
   }
   requestAnimationFrame(updateBubbles);
 }
-
-// Spawn bubbles
 function spawnBubble(){
-  if(!gameRunning || gamePaused){ setTimeout(spawnBubble,spawnRate); return; }
+  if(!gameRunning || gamePaused){ setTimeout(spawnBubble,spawnInterval); return; }
   const bubble=document.createElement('div');
   bubble.classList.add('bubble'); bubble.textContent='12';
   const size=Math.random()*60+60;
@@ -200,37 +201,29 @@ function spawnBubble(){
   bubbles.push(bubble);
   bubble.addEventListener('click',()=>popBubble(bubble));
   setTimeout(()=>{
-    if(bubbles.includes(bubble)){
-      bubble.remove(); bubbles=bubbles.filter(bb=>bb!==bubble); loseLife();
-    }
+    if(bubbles.includes(bubble)){ bubble.remove(); bubbles=bubbles.filter(bb=>bb!==bubble); loseLife(); }
   },5000);
-  setTimeout(spawnBubble,spawnRate);
+  setTimeout(spawnBubble,spawnInterval);
 }
-
-// Pop bubble
 function popBubble(b){
   if(!gameRunning || gamePaused) return;
   popSound.currentTime=0; popSound.play();
-  score++;
-  updateScore();
+  score++; updateScore();
   b.remove(); bubbles=bubbles.filter(bb=>bb!==b);
 }
-
-// Score & Lives
 function updateScore(){ scoreEl.textContent="Skóre: "+score; if(score>highscore){ highscore=score; highscoreEl.textContent="Nejvyšší skóre: "+highscore; } }
 function updateLives(){ livesEl.textContent="Životy: "+lives; }
 function loseLife(){ lives--; updateLives(); if(lives<=0) endGame(); }
 
-// Pause
+// ================= Pause =================
 pauseBtn.addEventListener('click',togglePause);
 function togglePause(){
   if(!gameRunning) return;
   gamePaused=!gamePaused;
-  if(gamePaused){ pauseScreen.style.display='flex'; }
-  else{ pauseScreen.style.display='none'; spawnBubble(); }
+  pauseScreen.style.display=gamePaused?'flex':'none';
 }
 
-// End Game
+// ================= End =================
 function endGame(){
   gameRunning=false;
   pauseBtn.style.display='none';
